--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <title>PaintJS</title>
   </head>
   <body>
+    <canvas id="jsCanvas" class="canvas"></canvas>
+    <div class="controls">
+      <div class="controls__colors" id="jsColors">
+        <div class="controls__color" style="background-color: #2c2c2c"></div>
+        <div class="controls__color" style="background-color: white"></div>
+        <div class="controls__color" style="background-color: #ff3b30"></div>
+        <div class="controls__color" style="background-color: #ff9500"></div>
+        <div class="controls__color" style="background-color: #ffcc00"></div>
+        <div class="controls__color" style="background-color: #4cd963"></div>
+        <div class="controls__color" style="background-color: #5ac8fa"></div>
+        <div class="controls__color" style="background-color: #0579ff"></div>
+        <div class="controls__color" style="background-color: #5856d6"></div>
+        <!--보기쉽게 html에서 background-color를 지정해준다-->
+      </div>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
