--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
   <body>
     <canvas id="jsCanvas" class="canvas"></canvas>
     <div class="controls">
+      <div class="controls__range">
+        <input
+          type="range"
+          id="jsRange"
+          min="0.1"
+          max="5"
+          value="2.5"
+          step="0.1"
+        /><!--최소 0.1까지/ 최대 5까지/ 기본값은 2.5/ 조절은 0.1씩-->
+      </div>
+      <div class="controls__btns">
+        <button id="jsMode">Fill</button>
+        <button id="jsSave">Save</button>
+      </div>
       <div class="controls__colors" id="jsColors">
         <div class="controls__color" style="background-color: #2c2c2c"></div>
         <div class="controls__color" style="background-color: white"></div>
